--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,19 +13,7 @@
         android:theme="@style/Theme.FoodRecipeApp"
         tools:targetApi="31">
         <activity
-            android:name=".screen.settings.SettingActivity"
-            android:exported="false" />
-        <activity
-            android:name=".screen.favourites.FavouriteActivity"
-            android:exported="false" />
-        <activity
-            android:name=".screen.detail.RecipeDetailActivity"
-            android:exported="false" />
-        <activity
-            android:name=".screen.home.HomeActivity"
-            android:exported="false" />
-        <activity
-            android:name=".screen.onboarding.OnBoardingActivity"
+            android:name=".screen.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
