--- a/gradle.properties
+++ b/gradle.properties
@@ -23,3 +23,5 @@ kotlin.code.style=official
 android.nonTransitiveRClass=true
 BASE_URL=gefrtjsdf
 API_KEY=fhwerjklhwejrj
+BASE_URL_RECIPES=asdqwe
+BASE_URL_FOOD_INGREDIENTS=zxcasd
