--- a/gradle.properties
+++ b/gradle.properties
@@ -21,7 +21,7 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
-BASE_URL=gefrtjsdf
-API_KEY=fhwerjklhwejrj
-BASE_URL_RECIPES=asdqwe
-BASE_URL_FOOD_INGREDIENTS=zxcasd
+BASE_URL=darkbruhlmao
+API_KEY=darkbruhlmao
+BASE_URL_RECIPES=darkbruhlmao
+BASE_URL_FOOD_INGREDIENTS=darkbruhlmao
